FIXED SCROLLING ON IOS OMG

--- a/src/index.css
+++ b/src/index.css
@@ -47,11 +47,11 @@ body {
 
 
 
-.fade-in {
+/* .fade-in {
     z-index: 10000000;
     background: black;
 
-    animation: fade 0.5s ease-out 0.25s forwards;
+    animation: fade 1s ease-out 0.25s forwards;
 }
 
 @keyframes fade {
@@ -69,7 +69,7 @@ body {
         width: 0;
         height: 0;
     }
-}
+} */
 
 header {
     width: 100%;
